--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
-# ReadingTypeID Agent 依赖包
+# Core dependencies
+openai==4.1.0
+python-dotenv==1.0.0
 
-# 核心依赖
-openai>=1.10.0
-pandas>=2.0.0
-python-dotenv>=1.0.0
+# Data processing
+pandas==2.1.0
+numpy==1.24.0
+
+# Web framework for serverless functions
+flask==2.3.3
+
+# Additional utilities
+requests==2.31.0
 
 # XML处理
 lxml>=4.9.0
 
 # 可选：增强功能
-requests>=2.28.0
 urllib3>=1.26.0
 
 # 开发依赖 (可选)
