--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+# lib/ (Python lib folder ignored, but we need src/lib for TypeScript)
 lib64/
 parts/
 sdist/
